added favicon, shared thumbnial and minor ui changes

--- a/app/globals.css
+++ b/app/globals.css
@@ -11,7 +11,7 @@
   /* Colors from your palette */
   --color-cream: #fff6f4;
   --color-choco: #833020;
-  --color-caramel: #ffae6d;
+  --color-caramel: #d67b39;
   --color-strawberry: #ffbfbf;
 
   /* Extras */
